<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.landing.signin.SignInFragment"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btSignInBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="?attr/colorSurface"
        android:src="@drawable/ic_arrowback_24dp" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/fragment_signIn"
        android:textSize="32sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledDenseStyle"
        android:id="@+id/tfSignInEmailOrUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="60dp"
        android:hint="@string/fragment_signIn_emailHint"
        app:boxBackgroundColor="?attr/colorTertiaryContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledDenseStyle"
        android:id="@+id/tfSignInPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="60dp"
        android:hint="@string/fragment_signIn_passwordHint"
        app:boxBackgroundColor="?attr/colorTertiaryContainer"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSignIn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:text="@string/fragment_signIn_button"
        android:textColor="@color/black"
        android:paddingVertical="15dp"
        android:backgroundTint="?attr/colorTertiaryContainer"
        app:cornerRadius="15dp"/>

</LinearLayout>