<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginHorizontal="24dp"-->
<!--        android:textColor="?colorOnPrimary"-->
<!--        android:textStyle="bold"-->
<!--        android:textSize="24sp"-->
<!--        android:text="@string/create_new_note" />-->

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledDenseStyle"
        android:id="@+id/tfFabNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        android:hint="@string/note_title"
        app:boxBackgroundColor="@android:color/transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledDenseStyle"
        android:id="@+id/tfFabNoteDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        android:hint="@string/note_description"
        app:boxBackgroundColor="@android:color/transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledDenseStyle"
        android:id="@+id/tfFabNoteImageUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        android:hint="@string/image_url"
        app:boxBackgroundColor="@android:color/transparent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginHorizontal="8dp"-->
<!--        android:orientation="horizontal">-->

<!--        <Button-->
<!--            android:id="@+id/btFabNoteCancel"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="?colorOnPrimary"-->
<!--            android:text="@string/cancel"-->
<!--            android:layout_weight="1"-->
<!--            style="?android:attr/buttonBarButtonStyle" />-->

<!--        <Button-->
<!--            android:id="@+id/btFabNoteConfirm"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="?colorOnPrimary"-->
<!--            android:text="@string/confirm"-->
<!--            android:layout_weight="1"-->
<!--            style="?android:attr/buttonBarButtonStyle" />-->

<!--    </LinearLayout>-->
</LinearLayout>